--- a/pp.html
+++ b/pp.html
@@ -20,9 +20,8 @@
             </ul>
         </nav>
         <div class="heading">
-            <p >Hello....!!</p>
-            <h3>Welcome to My Portfolio Website</h3>
-            <h1>I am<span> Mohammad Vajeedunnisa</span> </h1>
+            <p >Hello!!</p>
+            <h1>I am<br><span> Mohammad Vajeedunnisa</span></brss> </h1>
         </div>
     </div>
 </div>
